--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,28 +8,8 @@ jobs:
     strategy:
       matrix:
         version:
-          - '23'
-          - '23/alpine'
-          - '22'
-          - '22/alpine'
           - '0.21'
           - '0.21/alpine'
-          - '0.20'
-          - '0.20/alpine'
-          - '0.19'
-          - '0.19/alpine'
-          - '0.18'
-          - '0.18/alpine'
-          - '0.17'
-          - '0.17/alpine'
-          - '0.16'
-          - '0.16/alpine'
-          - '0.13'
-          - '0.13/alpine'
-          - '0.12'
-          - '0.12/alpine'
-          - '0.11'
-          - '0.11/alpine'
       fail-fast: false
     steps:
       - name: Set up Docker Buildx
@@ -43,18 +23,18 @@ jobs:
         run: |
           function version { echo "$@" | awk -F. '{ printf("%d%03d%03d%03d\n", $1,$2,$3,$4); }'; }
 
-          BITCOIN_VERSION=${{matrix.version}}
-          LATEST_BITCOIN_MAJOR_VERSION=$(find . -type d -maxdepth 1 -not -path '*/\.*' | sort -n | tail -n 1 | cut -c 3-)
+          LITECOIN_VERSION=${{matrix.version}}
+          LATEST_LITECOIN_MAJOR_VERSION=$(find . -type d -maxdepth 1 -not -path '*/\.*' | sort -n | tail -n 1 | cut -c 3-)
           PLATFORMS="linux/amd64"
           PUSH=false
-          REPO=ruimarinho/bitcoin-core
+          REPO=${{ github.repository_owner }}/litecoin-core
           TAGS=()
 
           if [[ $GITHUB_REF == refs/tags/* ]]; then
             TAG=${GITHUB_REF#refs/tags/}
             PUSH=true
 
-            if [[ ${BITCOIN_VERSION} == *"alpine"* ]]; then
+            if [[ ${LITECOIN_VERSION} == *"alpine"* ]]; then
               TAGS+=("$REPO:$TAG-alpine")
             else
               TAGS+=("$REPO:$TAG")
@@ -66,17 +46,17 @@ jobs:
               TAG_MAJOR_MINOR=$(echo $TAG | cut -c -4)"
             fi
 
-            if [ $(version ${TAG_MAJOR_MINOR}) -ne $(version ${BITCOIN_VERSION}) ]; then
-              echo "Skipping build of base image $BITCOIN_VERSION/ as ${TAG} is targeted at ${TAG_MAJOR_MINOR}/"
+            if [ $(version ${TAG_MAJOR_MINOR}) -ne $(version ${LITECOIN_VERSION}) ]; then
+              echo "Skipping build of base image $LITECOIN_VERSION/ as ${TAG} is targeted at ${TAG_MAJOR_MINOR}/"
               exit 0
             fi
           else
-            TAGS=("$REPO:${BITCOIN_VERSION/\//-}")
+            TAGS=("$REPO:${LITECOIN_VERSION/\//-}")
 
-            if [ $(version ${BITCOIN_VERSION}) -ge $(version ${LATEST_BITCOIN_MAJOR_VERSION}) ]; then
-              echo "Version $(version ${BITCOIN_VERSION}) is greater than or equal to $(version ${LATEST_BITCOIN_MAJOR_VERSION}), tagging as latest"
+            if [ $(version ${LITECOIN_VERSION}) -ge $(version ${LATEST_LITECOIN_MAJOR_VERSION}) ]; then
+              echo "Version $(version ${LITECOIN_VERSION}) is greater than or equal to $(version ${LATEST_LITECOIN_MAJOR_VERSION}), tagging as latest"
 
-              if [[ ${BITCOIN_VERSION} != *"alpine"* ]]; then
+              if [[ ${LITECOIN_VERSION} != *"alpine"* ]]; then
                 TAGS+=("$REPO:latest")
               else
                 TAGS+=("$REPO:alpine")
@@ -88,23 +68,23 @@ jobs:
             fi
           fi
 
-          if [[ ${BITCOIN_VERSION} != *"alpine"* ]] && [ $(version ${BITCOIN_VERSION}) -ge $(version "0.19") ]; then
+          if [[ ${LITECOIN_VERSION} != *"alpine"* ]] && [ $(version ${LITECOIN_VERSION}) -ge $(version "0.19") ]; then
             PLATFORMS="linux/amd64,linux/arm/v7,linux/arm64"
           fi
 
           echo ::set-output name=build_date::$(date -u +'%Y-%m-%dT%H:%M:%SZ')
           echo ::set-output name=docker_platforms::${PLATFORMS}
-          echo ::set-output name=docker_username::ruimarinho
+          echo ::set-output name=docker_username::${{ secrets.DOCKER_USERNAME }}
           echo ::set-output name=push::${PUSH}
           echo ::set-output name=tags::${TAGS[@]}
           echo ::set-output name=build::true
 
       - if: ${{ steps.prepare.outputs.build }} == 'true'
         name: Login into Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
-          username: ruimarinho
-          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - if: ${{ steps.prepare.outputs.build }} == 'true'
         name: Build Docker image
@@ -131,3 +111,8 @@ jobs:
             --build-arg "VCS_REF=${GITHUB_SHA::8}" \
             $(printf "%s" "${TAGS[@]/#/ --tag }" ) \
             ${{ matrix.version }}/
+
+      - if: ${{ steps.prepare.outputs.build }} == 'true'
+        name: Clear Docker credentials
+        run: |
+          rm -f ${HOME}/.docker/config.json
